# mpirion

./: .gitignore  Cargo.toml  README.md
examples/: benchmark.rs  benchmark_custom_world_size.rs  benchmark_multiple_groups.rs  benchmark_multiple_kernels.rs  benchmark_simple.rs  benchmark_with_input.rs
src/: lib.rs
