[package]
name = "mpirion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version = "0.4", features = ["html_reports", "plotters"] }
mpi = { version = "0.6", features = ["user-operations", "derive"], git = "https://github.com/Cydhra/rsmpi", branch="sized_process" }